--- a/angular/src/app/herramientas/carga-resultados/carga-resultados.page.html
+++ b/angular/src/app/herramientas/carga-resultados/carga-resultados.page.html
@@ -21,6 +21,10 @@
         <ion-button expand="block" color="primary" (click)="volver()" class="ion-margin-top">Volver</ion-button>
       </ion-col>
       <ion-col size="12" size-md="6">
+        <!-- Botón Cargar Resultados -->
+        <ion-button expand="block" color="primary" class="ion-margin-bottom" [disabled]="!canCargarResultados()" (click)="cargarResultados()">
+          Cargar Resultados
+        </ion-button>
         <!-- Segunda columna: log de validaciones -->
         <ion-card *ngIf="exportacionValida" color="success">
           <ion-card-content>
