--- a/angular/src/app/herramientas/herramientas.page.html
+++ b/angular/src/app/herramientas/herramientas.page.html
@@ -41,7 +41,8 @@
             <div style="margin-bottom: 8px; color: #666; font-size: 14px;">
               Tamaño máximo de archivo permitido: 2 GB (.zip)
             </div>
-            <input type="file" #fileInput accept=".zip" style="display: none;" (change)="onFileSelected($event)">
+            <!-- Input para seleccionar directorio de resultados -->
+            <input type="file" webkitdirectory directory multiple (change)="onFileSelected($event)" />
             <ion-button expand="block" color="secondary" (click)="fileInput.click()">Cargar Resultados</ion-button>
           </ion-card-content>
         </ion-card>
