--- a/angular/src/app/herramientas/herramientas.page.scss
+++ b/angular/src/app/herramientas/herramientas.page.scss
@@ -22,4 +22,20 @@ ion-icon[size="large"] {
   font-size: 48px;
   color: var(--ion-color-medium);
   margin-bottom: 16px;
+}
+
+ion-row {
+  align-items: stretch;
+}
+
+ion-col {
+  display: flex;
+  flex-direction: column;
+}
+
+ion-card {
+  flex: 1 1 auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 } 
