--- a/angular/src/app/herramientas/herramientas.page.html
+++ b/angular/src/app/herramientas/herramientas.page.html
@@ -39,8 +39,18 @@
           </ion-card-header>
           <ion-card-content>
             <!-- Input para seleccionar directorio de resultados -->
-            <input type="file" webkitdirectory directory multiple (change)="onFileSelected($event)" />
+            <input #fileInput type="file" webkitdirectory directory multiple (change)="onFileSelected($event)" style="display: none;" />
             <ion-button expand="block" color="secondary" (click)="fileInput.click()">Cargar Resultados</ion-button>
+          </ion-card-content>
+        </ion-card>
+      </ion-col>
+      <ion-col size="12" size-sm="6" size-md="4" size-lg="3">
+        <ion-card>
+          <ion-card-header>
+            <ion-card-title>Ranking</ion-card-title>
+          </ion-card-header>
+          <ion-card-content>
+            <ion-button expand="block" color="primary" (click)="recalcularRanking()">Recalcular Ranking</ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
