fix: corregir URLs de imágenes de perfil de usuario para usar IMAGES_BASE_URL

--- a/angular/src/app/usuario/perfil/perfil.page.html
+++ b/angular/src/app/usuario/perfil/perfil.page.html
@@ -30,7 +30,7 @@
           <ion-row class="ion-justify-content-center">
             <ion-col size="5">
               <app-usuario-img
-                [src]="this.imgUrl != null ? configService.apiUrl( this.imgUrl ) : ''"
+                [src]="this.imgUrl != null ? configService.imageUrl(this.imgUrl) : ''"
               ></app-usuario-img>
             </ion-col>
           </ion-row>
