--- a/angular/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
+++ b/angular/src/app/concursos/concurso-detail/concursantes/concursantes.component.html
@@ -109,7 +109,7 @@
                           >
                             <!-- user card -->
                             <ion-col size="3" size-sm="1.3">
-                              <app-usuario-img [src]="m.profile.img_url != null ? configService.apiUrl(m.profile.img_url) : ''"></app-usuario-img>
+                              <app-usuario-img [src]="m.profile.img_url != null ? configService.imageUrl(m.profile.img_url) : ''"></app-usuario-img>
                             </ion-col>
 
                             <ion-col size="8" size-sm="8.2">
