fix: usar IMAGES_BASE_URL para imágenes de la comisión directiva en el home

--- a/angular/src/app/info-centro/presentacion-comision-directiva/presentacion-comision-directiva.component.html
+++ b/angular/src/app/info-centro/presentacion-comision-directiva/presentacion-comision-directiva.component.html
@@ -15,7 +15,7 @@
                     
                       <ion-row class="w-100">
                         <ion-col>
-                            <app-usuario-img [src]="s.img_url != null ? configService.apiUrl(s.img_url) : '' "></app-usuario-img>
+                            <app-usuario-img [src]="s.img_url != null ? configService.imageUrl(s.img_url) : '' "></app-usuario-img>
                         </ion-col>
                       </ion-row>
                       <ion-row class="ion-text-center" >
