feat: cambiar texto del botón a 'Listado Inscriptos' en sección Herramientas

--- a/angular/src/app/herramientas/herramientas.page.html
+++ b/angular/src/app/herramientas/herramientas.page.html
@@ -28,7 +28,7 @@
                 <ion-select-option *ngFor="let c of concursos" [value]="c">{{c.name}}</ion-select-option>
               </ion-select>
             </ion-item>
-            <ion-button expand="block" color="primary" [disabled]="!concursoSeleccionado" (click)="descargarListado()">Descargar listado</ion-button>
+            <ion-button expand="block" color="primary" [disabled]="!concursoSeleccionado" (click)="descargarListado()">Listado Inscriptos</ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
