--- a/angular/src/app/modules/auth/components/login-view/login-view.component.html
+++ b/angular/src/app/modules/auth/components/login-view/login-view.component.html
@@ -58,6 +58,12 @@
                         </ion-row>
                       </ion-col>
                     </ion-row>
+                    <!-- Enlace de recuperación de contraseña -->
+                    <ion-row>
+                      <ion-col size="12" class="ion-text-right ion-padding-top">
+                        <a href="/#/recuperar-password" class="enlace-recuperar-pass">¿Olvidaste tu contraseña?</a>
+                      </ion-col>
+                    </ion-row>
                   </ion-col>
                 </ion-item>
               </div>
