fix: Corregir construcción de URLs de imágenes usando IMAGES_BASE_URL
- Reemplazar configService.apiUrl() por configService.imageUrl() para imágenes
- Actualizar vista de detalle de fotografías (ver-fotografias.component.html)
- Corregir URLs en presentación de miembros y gestión de fotoclubs
- Actualizar componentes de info-centro y concurso-post
- Asegurar uso correcto de IMAGES_BASE_URL para URLs absolutas de imágenes

--- a/angular/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
@@ -51,7 +51,7 @@
                 <img 
                   (ionError)="yepImg = false"
                   *ngIf="yepImg==true;" 
-                  [src]="all_data[index].image.url != null ? configService.apiUrl(all_data[index].image.url) : ''"
+                  [src]="all_data[index].image.url != null ? configService.imageUrl(all_data[index].image.url) : ''"
                   class="img-det-modal"
                 />
               </ion-col>
