--- a/angular/src/app/info-centro/presentacion-miembros/presentacion-miembros.component.html
+++ b/angular/src/app/info-centro/presentacion-miembros/presentacion-miembros.component.html
@@ -14,7 +14,7 @@
 
                   <ion-col size-md="6" size="12" class="div ion-padding">
                       
-                      <ion-img [src]="s.photo_url != null && s.photo_url != ''  ? configService.apiUrl(s.photo_url) : './assets/no-pictures.png' "></ion-img>
+                      <ion-img [src]="s.photo_url != null && s.photo_url != ''  ? configService.imageUrl(s.photo_url) : './assets/no-pictures.png' "></ion-img>
                   </ion-col>
 
                   <ion-col>
