--- a/angular/src/app/fotoclubs-abm/fotoclubs-abm.page.html
+++ b/angular/src/app/fotoclubs-abm/fotoclubs-abm.page.html
@@ -85,7 +85,7 @@
                                   <ion-img
                                     class="imgFotoclub"
                                     [ngStyle]="aspecto && (f.photo_url == null || f.photo_url == '') ? {'filter': 'invert(100)' }:{ 'filter': 'invert(0)'}"
-                                    [src]="f.photo_url != null && f.photo_url != ''  ? configService.apiUrl(f.photo_url) : './assets/no-pictures.png' "
+                                    [src]="f.photo_url != null && f.photo_url != ''  ? configService.imageUrl(f.photo_url) : './assets/no-pictures.png' "
                                   ></ion-img>
                                 </ion-thumbnail>
 
