--- a/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -156,8 +156,8 @@
                               <ion-row class="ion-justify-content-center">
                                 <ion-col size="auto">
                                     <img class="img-galeria"  title="Ver fotografía" (click)="openImage(i)" 
-                                      [ngStyle]="aspecto && (getThumbUrl(r.image.thumbnail,1) == '') ? {'filter': 'invert(100)' }:{ 'filter': 'invert(0)'}"
-                                      [src]="getThumbUrl(r.image.thumbnail,1) != '' ? getThumbUrl(r.image.thumbnail,1) : './assets/no-pictures.png'"
+                                      [ngStyle]="aspecto && (getThumbUrl(r.thumbnail,1) == '') ? {'filter': 'invert(100)' }:{ 'filter': 'invert(0)'}"
+                                      [src]="getThumbUrl(r.thumbnail,1) != '' ? getThumbUrl(r.thumbnail,1) : './assets/no-pictures.png'"
                                     />                                    
                                 </ion-col>
                               </ion-row>
