Actualización de cambios automáticos

--- a/angular/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/ver-fotografias/ver-fotografias.component.html
@@ -74,7 +74,7 @@
                   && all_data[index].metric.prize != null && all_data[index].metric.prize != undefined ? all_data[index].metric.prize : '-' }}
                 </p>
                 <p *ngIf="!open">
-                  <b>Autor/a: </b>{{all_data[index]?.image?.profile?.name}} {{all_data[index]?.image?.profile?.last_name}} 
+                  <b>Autor/a: </b>{{all_data[index]?.profile?.name}} {{all_data[index]?.profile?.last_name}} 
                 </p>
               </ion-col>
             </ion-row>
