--- a/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -220,7 +220,9 @@
                 <p>Cargando más fotografías...</p>
               </div>
               <div *ngIf="noMoreResults" class="ion-text-center ion-padding">
-                <p>No hay más fotografías para mostrar.</p>
+                <ion-icon name="images-outline" style="font-size: 2.5em; color: #888;"></ion-icon>
+                <h3 class="ion-margin-top" style="color: #666;">¡Has llegado al final!</h3>
+                <p style="color: #888;">No hay más imágenes para mostrar.</p>
               </div>
                 <div *ngIf="!noMoreResults && !loadingScroll" class="ion-text-center ion-padding">
                   <ion-button (click)="loadMoreNative()" expand="block" color="primary">
