Fade-in incremental: las imágenes aparecen con transición de opacidad al ser cargadas

--- a/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -155,10 +155,14 @@
                               <ion-col *ngFor="let r of resultadosConcursoFiltrados; index as i" class="ion-padding" size="12" size-sm="6" size-md="auto">
                                 <ion-row class="ion-justify-content-center">
                                   <ion-col size="auto">
-                                      <img class="img-galeria"  title="Ver fotografía" (click)="openImage(i)" 
-                                        [ngStyle]="aspecto && (getThumbUrl(r.thumbnails[0],1) == '') ? {'filter': 'invert(100)' }:{ 'filter': 'invert(0)'}"
+                                      <img class="img-galeria fade-in-img"  title="Ver fotografía" (click)="openImage(i)"
+                                        [ngStyle]="{
+                                          'filter': aspecto && (getThumbUrl(r.thumbnails[0],1) == '') ? 'invert(100)' : 'invert(0)',
+                                          'opacity': imagenCargada[i] ? 1 : 0,
+                                          'transition': 'opacity 0.7s ease'
+                                        }"
                                         [src]="getThumbUrl(r.thumbnails[0],1) != '' ? getThumbUrl(r.thumbnails[0],1) : './assets/no-pictures.png'"
-                                      />                                    
+                                      />
                                   </ion-col>
                                 </ion-row>
 
