--- a/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.scss
+++ b/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.scss
@@ -1,3 +1,12 @@
+// Animación de aparición de imagen
+// .fade-in-img {
+//   opacity: 0;
+//   transition: opacity 0.7s ease;
+// }
+
+.fade-in-img[src] {
+    opacity: 1;
+}
 .lista-elem {
     --inner-padding-end: 0;
  }
