--- a/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -1,5 +1,5 @@
-<ion-content>
-  <div #scrollContainer class="custom-scroll-container" style="min-height: 60vh;">
+<ion-content (ionScroll)="onIonScroll($event)">
+  <div class="custom-scroll-container" style="min-height: 60vh;">
     <ion-grid *ngIf="(auth.user | async) as u" class="ion-no-padding ion-no-margin" #content>
       <ion-row class="ion-justify-content-center">
         
