Scroll infinito automático: reduce intervalo entre páginas a 300ms

--- a/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -1,4 +1,4 @@
-<ion-content (ionScroll)="onIonScroll($event)">
+<ion-content>
   <div class="custom-scroll-container" style="min-height: 60vh;">
     <ion-grid *ngIf="(auth.user | async) as u" class="ion-no-padding ion-no-margin" #content>
       <ion-row class="ion-justify-content-center">
