--- a/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -64,10 +64,10 @@
                   </ion-button>
 
                   <ion-item >
-                    <ion-label position="stacked">Fotoclub</ion-label>
-                    <ion-select [(ngModel)]="fotoclubSeleccionado" class="min-10rem"  okText="Aceptar" cancelText="Cancelar"  interface="popover">
-                      <ion-select-option *ngFor="let f of fotoclubsDisponibles" [value]="f">{{ f }}</ion-select-option>
-                    </ion-select>
+                      <ion-label position="stacked">Fotoclub</ion-label>
+                        <ion-select *ngIf="!isContestNotFin || !rolificador.esConcursante(u)" [(ngModel)]="fotoclubSeleccionado" class="min-10rem"  okText="Aceptar" cancelText="Cancelar"  interface="popover">
+                          <ion-select-option *ngFor="let f of fotoclubsDisponibles" [value]="f">{{ f }}</ion-select-option>
+                        </ion-select>
                   </ion-item>
 
 
