Ocultar filtro por fotoclub en barra lateral para concursantes en concursos no juzgados

--- a/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -9,6 +9,12 @@
   
           <app-search-bar [(data)]="resultadosConcurso" [atributosObj]="atributosBusqueda"></app-search-bar>
 
+          <ion-item *ngIf="!isContestNotFin || !rolificador.esConcursante(u)">
+            <ion-label position="stacked">Fotoclub</ion-label>
+            <ion-select [(ngModel)]="fotoclubSeleccionado" class="min-10rem" okText="Aceptar" cancelText="Cancelar" interface="popover">
+              <ion-select-option *ngFor="let f of fotoclubsDisponibles" [value]="f">{{ f }}</ion-select-option>
+            </ion-select>
+          </ion-item>
         </ion-col>
       </ion-col>
   
