--- a/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
+++ b/angular/src/app/concursos/concurso-detail/fotografias/fotografias.component.html
@@ -7,7 +7,7 @@
         <ion-col >
           <ion-title class="ion-margin-top">Búsqueda</ion-title>
   
-          <app-search-bar [(data)]="resultadosConcurso" [atributosObj]="atributosBusqueda"></app-search-bar>
+          <app-search-bar [(data)]="resultadosConcurso" [atributosObj]="atributosBusquedaFiltrados"></app-search-bar>
 
         </ion-col>
       </ion-col>
