se centran los botones de inscripcion

--- a/angular/src/app/concursos/concurso-detail/informacion/informacion.component.html
+++ b/angular/src/app/concursos/concurso-detail/informacion/informacion.component.html
@@ -48,7 +48,7 @@
               </ion-button>
             </ion-row>
 
-            <ion-row class="w-100 ion-justify-content-end">
+            <ion-row class="w-100 ion-justify-content-center">
           <div>
             <ion-button  *ngIf="isContestNotFin && !isInscripto" size="small" (click)="inscribirConcursante()"
               >Inscribirme!</ion-button>
