en el datalle del perfil se quita seccion y categoria

--- a/angular/src/app/concursos/ranking/ranking-detalle-modal/ranking-detalle-modal.component.html
+++ b/angular/src/app/concursos/ranking/ranking-detalle-modal/ranking-detalle-modal.component.html
@@ -51,21 +51,9 @@
                 </ion-col>
               </ion-row>
               <ion-row class="ion-margin-top">
-                <ion-col>
-                  <b>Categorías:</b>
-                  <span *ngFor="let c of detalle?.categories" class="ion-margin-start">
-                    <ion-badge color="light">{{ c.name }}</ion-badge>
-                  </span>
-                </ion-col>
+                <ion-col></ion-col>
               </ion-row>
-              <ion-row class="ion-margin-top">
-                <ion-col>
-                  <b>Secciones:</b>
-                  <span *ngFor="let s of detalle?.sections" class="ion-margin-start">
-                    <ion-badge color="light">{{ s.name }}</ion-badge>
-                  </span>
-                </ion-col>
-              </ion-row>
+              
             </ion-card-content>
           </ion-card>
 
