--- a/angular/src/app/concursos/ranking/ranking-detalle-modal/ranking-detalle-modal.component.html
+++ b/angular/src/app/concursos/ranking/ranking-detalle-modal/ranking-detalle-modal.component.html
@@ -3,8 +3,11 @@
     <ion-toolbar>
       <ion-row class="ion-align-items-center ion-margin-end ion-margin-start">
         <ion-col>
-          <h5 class="ion-text-wrap">
+          <h5 class="ion-text-wrap" *ngIf="!detalle?.items">
             {{ detalle?.contest?.name }}
+          </h5>
+          <h5 class="ion-text-wrap" *ngIf="detalle?.items">
+            Detalle de ranking - Año {{ detalle?.year }}
           </h5>
         </ion-col>
         <ion-col size="1" class="ion-hide-md-down">
@@ -22,9 +25,12 @@
         <ion-col>
           <ion-row class="ion-align-items-center ion-justify-content-between">
             <ion-col>
-              <ion-card-subtitle>
+              <ion-card-subtitle *ngIf="!detalle?.items">
                 {{ detalle?.contest?.start_date }} -
                 {{ detalle?.contest?.end_date }}
+              </ion-card-subtitle>
+              <ion-card-subtitle *ngIf="detalle?.items">
+                Año: {{ detalle?.year }}
               </ion-card-subtitle>
             </ion-col>
             <ion-col size="auto">
@@ -57,58 +63,120 @@
             </ion-card-content>
           </ion-card>
 
-          <ion-card class="ion-margin-top">
-            <ion-card-header>
-              <ion-card-title>Resultados</ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              <ion-list>
-                <ion-item color="dark">
-                  <ion-grid>
-                    <ion-row>
-                      <ion-col size="3">Sección</ion-col>
-                      <ion-col size="3">Categoría</ion-col>
-                      <ion-col size="3">Imagen</ion-col>
-                      <ion-col size="3">Métrica</ion-col>
-                    </ion-row>
-                  </ion-grid>
-                </ion-item>
-                <ng-container *ngFor="let r of detalle?.results">
-                  <ion-item *ngFor="let img of r.images">
+          <ng-container *ngIf="!detalle?.items; else multiple">
+            <ion-card class="ion-margin-top">
+              <ion-card-header>
+                <ion-card-title>Resultados</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-list>
+                  <ion-item color="dark">
                     <ion-grid>
                       <ion-row>
-                        <ion-col size="3">{{ r.section }}</ion-col>
-                        <ion-col size="3">{{ r.category }}</ion-col>
-                        <ion-col size="3">#{{ img.image_id }}</ion-col>
-                        <ion-col size="3">
-                          <ion-badge>{{ img.metric?.prize }}</ion-badge>
-                          <span class="ion-margin-start">{{ img.metric?.score }}</span>
-                        </ion-col>
+                        <ion-col size="3">Sección</ion-col>
+                        <ion-col size="3">Categoría</ion-col>
+                        <ion-col size="3">Imagen</ion-col>
+                        <ion-col size="3">Métrica</ion-col>
                       </ion-row>
                     </ion-grid>
                   </ion-item>
-                </ng-container>
-              </ion-list>
-            </ion-card-content>
-          </ion-card>
+                  <ng-container *ngFor="let r of detalle?.results">
+                    <ion-item *ngFor="let img of r.images">
+                      <ion-grid>
+                        <ion-row>
+                          <ion-col size="3">{{ r.section }}</ion-col>
+                          <ion-col size="3">{{ r.category }}</ion-col>
+                          <ion-col size="3">#{{ img.image_id }}</ion-col>
+                          <ion-col size="3">
+                            <ion-badge>{{ img.metric?.prize }}</ion-badge>
+                            <span class="ion-margin-start">{{ img.metric?.score }}</span>
+                          </ion-col>
+                        </ion-row>
+                      </ion-grid>
+                    </ion-item>
+                  </ng-container>
+                </ion-list>
+              </ion-card-content>
+            </ion-card>
 
-          <ion-card class="ion-margin-top ion-margin-bottom">
-            <ion-card-header>
-              <ion-card-title>Ranking</ion-card-title>
-            </ion-card-header>
-            <ion-card-content>
-              <ion-row>
-                <ion-col size="6">
-                  <b>Puntaje total:</b>
-                  <span class="ion-margin-start">{{ detalle?.ranking?.total_score }}</span>
-                </ion-col>
-                <ion-col size="6">
-                  <b>Posición:</b>
-                  <span class="ion-margin-start">{{ detalle?.ranking?.position }}</span>
-                </ion-col>
-              </ion-row>
-            </ion-card-content>
-          </ion-card>
+            <ion-card class="ion-margin-top ion-margin-bottom">
+              <ion-card-header>
+                <ion-card-title>Ranking</ion-card-title>
+              </ion-card-header>
+              <ion-card-content>
+                <ion-row>
+                  <ion-col size="6">
+                    <b>Puntaje total:</b>
+                    <span class="ion-margin-start">{{ detalle?.ranking?.total_score }}</span>
+                  </ion-col>
+                  <ion-col size="6">
+                    <b>Posición:</b>
+                    <span class="ion-margin-start">{{ detalle?.ranking?.position }}</span>
+                  </ion-col>
+                </ion-row>
+              </ion-card-content>
+            </ion-card>
+          </ng-container>
+
+          <ng-template #multiple>
+            <ng-container *ngFor="let it of detalle.items">
+              <ion-card class="ion-margin-top">
+                <ion-card-header>
+                  <ion-card-title>{{ it?.contest?.name }}</ion-card-title>
+                  <ion-card-subtitle>
+                    {{ it?.contest?.start_date }} - {{ it?.contest?.end_date }}
+                  </ion-card-subtitle>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-list>
+                    <ion-item color="dark">
+                      <ion-grid>
+                        <ion-row>
+                          <ion-col size="3">Sección</ion-col>
+                          <ion-col size="3">Categoría</ion-col>
+                          <ion-col size="3">Imagen</ion-col>
+                          <ion-col size="3">Métrica</ion-col>
+                        </ion-row>
+                      </ion-grid>
+                    </ion-item>
+                    <ng-container *ngFor="let r of it?.results">
+                      <ion-item *ngFor="let img of r.images">
+                        <ion-grid>
+                          <ion-row>
+                            <ion-col size="3">{{ r.section }}</ion-col>
+                            <ion-col size="3">{{ r.category }}</ion-col>
+                            <ion-col size="3">#{{ img.image_id }}</ion-col>
+                            <ion-col size="3">
+                              <ion-badge>{{ img.metric?.prize }}</ion-badge>
+                              <span class="ion-margin-start">{{ img.metric?.score }}</span>
+                            </ion-col>
+                          </ion-row>
+                        </ion-grid>
+                      </ion-item>
+                    </ng-container>
+                  </ion-list>
+                </ion-card-content>
+              </ion-card>
+
+              <ion-card class="ion-margin-top ion-margin-bottom">
+                <ion-card-header>
+                  <ion-card-title>Ranking</ion-card-title>
+                </ion-card-header>
+                <ion-card-content>
+                  <ion-row>
+                    <ion-col size="6">
+                      <b>Puntaje total:</b>
+                      <span class="ion-margin-start">{{ it?.ranking?.total_score }}</span>
+                    </ion-col>
+                    <ion-col size="6">
+                      <b>Posición:</b>
+                      <span class="ion-margin-start">{{ it?.ranking?.position }}</span>
+                    </ion-col>
+                  </ion-row>
+                </ion-card-content>
+              </ion-card>
+            </ng-container>
+          </ng-template>
         </ion-col>
       </ion-row>
     </ion-grid>
