Se aumenta el ancho del modal de detalle de ranking

--- a/angular/src/global.scss
+++ b/angular/src/global.scss
@@ -75,6 +75,10 @@
     margin-right: 0 !important;
   }
 
+  ion-modal.modal-wide {
+    --width: 80vw;
+  }
+
   ion-modal.auto-width {
     &.bottom {
       align-items: flex-end;
