--- a/angular/src/app/concursos/ranking/ranking-detalle-modal/ranking-detalle-modal.component.html
+++ b/angular/src/app/concursos/ranking/ranking-detalle-modal/ranking-detalle-modal.component.html
@@ -26,8 +26,8 @@
           <ion-row class="ion-align-items-center ion-justify-content-between">
             <ion-col>
               <ion-card-subtitle *ngIf="!detalle?.items">
-                {{ detalle?.contest?.start_date }} -
-                {{ detalle?.contest?.end_date }}
+                {{ formatDate(detalle?.contest?.start_date) }} -
+                {{ formatDate(detalle?.contest?.end_date) }}
               </ion-card-subtitle>
               <ion-card-subtitle *ngIf="detalle?.items">
                 Año: {{ detalle?.year }}
@@ -124,7 +124,7 @@
                 <ion-card-header>
                   <ion-card-title>{{ it?.contest?.name }}</ion-card-title>
                   <ion-card-subtitle>
-                    {{ it?.contest?.start_date }} - {{ it?.contest?.end_date }}
+                    {{ formatDate(it?.contest?.start_date) }} - {{ formatDate(it?.contest?.end_date) }}
                   </ion-card-subtitle>
                 </ion-card-header>
                 <ion-card-content>
