--- a/angular/src/app/concursos/ranking/ranking-detalle-modal/ranking-detalle-modal.component.html
+++ b/angular/src/app/concursos/ranking/ranking-detalle-modal/ranking-detalle-modal.component.html
@@ -177,6 +177,24 @@
               </ion-card>
             </ng-container>
           </ng-template>
+          
+          <ion-card class="ion-margin-top ion-margin-bottom">
+            <ion-card-header>
+              <ion-card-title>Sumatoria de puntajes</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-row>
+                <ion-col size="6">
+                  <b>Total general:</b>
+                  <span class="ion-margin-start">{{ totalScoreAll() }}</span>
+                </ion-col>
+                <ion-col size="6" *ngIf="detalle?.items">
+                  <b>Concursos contabilizados:</b>
+                  <span class="ion-margin-start">{{ detalle.items.length }}</span>
+                </ion-col>
+              </ion-row>
+            </ion-card-content>
+          </ion-card>
         </ion-col>
       </ion-row>
     </ion-grid>
