Se modifica descripcion botones area herramientas

--- a/angular/src/app/herramientas/herramientas.page.html
+++ b/angular/src/app/herramientas/herramientas.page.html
@@ -57,10 +57,10 @@
       <ion-col size="12" size-sm="6" size-md="4" size-lg="3">
         <ion-card>
           <ion-card-header>
-            <ion-card-title>Ganadoras temporada</ion-card-title>
+            <ion-card-title>Premiadas Temporada</ion-card-title>
           </ion-card-header>
           <ion-card-content>
-            <ion-button expand="block" color="tertiary" (click)="descargarCompiladoGanadoras()">Descargar compilado</ion-button>
+            <ion-button expand="block" color="tertiary" (click)="descargarCompiladoGanadoras()">Descargar Compilado</ion-button>
           </ion-card-content>
         </ion-card>
       </ion-col>
